--- a/app/src/main/res/layout/item_private.xml
+++ b/app/src/main/res/layout/item_private.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/tile_height_3row"
+                android:layout_height="wrap_content"
                 android:minHeight="@dimen/tile_height_3row">
     <TextView
         android:id="@+id/section_header_private"
