--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -114,11 +114,35 @@
                             android:textSize="16sp"/>
                     </LinearLayout>
                     <LinearLayout
-                        android:id="@+id/edit_layout_privacy"
+                        android:id="@+id/edit_layout_security"
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/edit_layout_password"
+                        android:weightSum="1">
+                        <TextView
+                            android:id="@+id/edit_label_security"
+                            android:layout_width="0px"
+                            android:layout_height="wrap_content"
+                            android:layout_weight=".4"
+                            android:labelFor="@+id/edit_field_security"
+                            android:text="Security"
+                            android:textColor="@color/dark_grey"
+                            android:textSize="16sp"/>
+                        <EditText
+                            android:id="@+id/edit_field_security"
+                            android:layout_width="0px"
+                            android:layout_height="wrap_content"
+                            android:layout_weight=".6"
+                            android:inputType="text"
+                            android:textSize="16sp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/edit_layout_privacy"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/edit_layout_security"
                         android:weightSum="1">
                         <TextView
                             android:id="@+id/edit_label_privacy"
