--- a/app/src/main/res/layout/item_scan.xml
+++ b/app/src/main/res/layout/item_scan.xml
@@ -4,53 +4,64 @@
                 android:layout_height="@dimen/tile_height_3row">
 
     <TextView
-        android:id="@+id/lTitle_scan"
+        android:id="@+id/scan_field_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="@dimen/tile_padding_top_3row"
         android:layout_marginStart="@dimen/tile_padding_side"
-        android:layout_marginEnd="@dimen/tile_padding_side"
+        android:layout_marginEnd="@dimen/tile_padding_side_icon"
         android:text="@string/placeholder_text"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:textColor="@android:color/black"/>
+
+    <ImageView
+        android:id="@+id/scan_icon_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_info"
+        android:layout_alignTop="@id/scan_field_name"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="@dimen/tile_padding_side"
+        android:layout_marginEnd="@dimen/tile_padding_side"/>
 
     <TextView
-        android:id="@+id/lPassword_scan"
+        android:id="@+id/scan_label_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lTitle_scan"
+        android:layout_below="@+id/scan_field_name"
         android:layout_marginStart="@dimen/tile_padding_side"
         android:layout_marginEnd="@dimen/tile_padding_side"
-        android:text="@string/scan_label_password"
+        android:text="@string/label_password"
         android:textSize="14sp"/>
     <TextView
-        android:id="@+id/lSubtitle_scan"
+        android:id="@+id/scan_field_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lTitle_scan"
-        android:layout_toEndOf="@+id/lPassword_scan"
+        android:layout_below="@+id/scan_field_name"
+        android:layout_toEndOf="@+id/scan_label_password"
         android:layout_marginStart="@dimen/tile_padding_small"
         android:text="@string/placeholder_text"
         android:textSize="14sp"/>
 
     <TextView
-        android:id="@+id/lPublisher_scan"
+        android:id="@+id/scan_label_publisher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lSubtitle_scan"
+        android:layout_below="@+id/scan_field_password"
         android:layout_marginStart="@dimen/tile_padding_side"
         android:layout_marginEnd="@dimen/tile_padding_side"
-        android:text="@string/scan_label_publisher"
+        android:text="@string/label_publisher"
         android:textSize="14sp"/>
     <TextView
-        android:id="@+id/lSubtitle2_scan"
-        android:layout_width="match_parent"
+        android:id="@+id/scan_field_publisher"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@id/lSubtitle_scan"
-        android:layout_toEndOf="@id/lPublisher_scan"
-        android:layout_below="@+id/lSubtitle_scan"
-        android:paddingBottom="@dimen/tile_padding_bottom"
+        android:layout_alignStart="@id/scan_field_password"
+        android:layout_toEndOf="@id/scan_label_publisher"
+        android:layout_below="@+id/scan_field_password"
+        android:layout_marginBottom="@dimen/tile_padding_bottom"
         android:text="@string/placeholder_text"
         android:textSize="14sp"/>
 
