--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -32,15 +32,17 @@
         android:textColor="#FFFFFF"
         android:textStyle="bold"/>
 
-    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:id="@+id/drawer_list"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:layout_below="@+id/navigation_image_header"
-              android:choiceMode="singleChoice"
-              android:divider="@android:color/transparent"
-              android:dividerHeight="0dp"
-              >
+    <ListView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/navigation_image_header"
+        android:layout_marginTop="@dimen/tile_padding_small"
+        android:layout_marginBottom="@dimen/tile_padding_small"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp">
     </ListView>
 </RelativeLayout>
