--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorSecondary">@color/material_deep_teal_200</color>
     <color name="colorSecondaryDark">@color/material_deep_teal_500</color>
 
+    <color name="very_light_grey">#EEEEEE</color>
     <color name="light_grey">#d3d3d3</color>
     <color name="dark_grey">#757575</color>
     <color name="windowBackgroundColor">#333333</color>
