--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="tile_height_1row_icon">56dp</dimen>
     
     <dimen name="tile_padding_side">16dp</dimen>
+    <dimen name="tile_padding_side_icon">56dp</dimen>
     <dimen name="tile_padding_small">8dp</dimen>
     <dimen name="tile_padding_large">20dp</dimen>
     <dimen name="tile_padding_xlarge">48dp</dimen>
