--- a/app/src/main/res/values/urls.xml
+++ b/app/src/main/res/values/urls.xml
@@ -4,5 +4,5 @@
     <string name="url_register">http://192.168.55.102:3000/Users</string>
     <string name="url_private_aps">http://192.168.55.102:3000/Users/Authenticated/AccessPoints</string>
     <string name="url_public_aps">http://192.168.55.102:3000/AccessPoints</string>
-    <string name="url_edit_ap">http://192.168.55.102:3000/AccessPoints/</string>
+    <string name="url_instance_ap">http://192.168.55.102:3000/AccessPoints/</string>
 </resources>
