--- a/app/src/main/res/layout/item_public.xml
+++ b/app/src/main/res/layout/item_public.xml
@@ -6,7 +6,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder_text"
+        android:text="@string/debug_placeholder"
         android:id="@+id/lTitle_public"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
@@ -19,7 +19,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder_text"
+        android:text="@string/debug_placeholder"
         android:id="@+id/lSubtitle_public"
         android:layout_below="@+id/lTitle_public"
 
@@ -31,7 +31,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder_text"
+        android:text="@string/debug_placeholder"
         android:id="@+id/lSubtitle2_public"
 
         android:layout_marginLeft="@dimen/tile_padding_side"
