--- a/app/src/main/res/layout/item_private.xml
+++ b/app/src/main/res/layout/item_private.xml
@@ -7,11 +7,11 @@
         android:id="@+id/private_section_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:paddingTop="@dimen/tile_padding_small"
         android:paddingBottom="@dimen/tile_padding_small"
-        android:paddingStart="@dimen/tile_padding_side"
-        android:paddingEnd="@dimen/tile_padding_side"
+        android:paddingLeft="@dimen/tile_padding_side"
+        android:paddingRight="@dimen/tile_padding_side"
         android:background="@color/light_grey"
         android:textColor="@color/dark_grey"
         android:visibility="gone"/>
@@ -21,10 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/private_section_header"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginTop="@dimen/tile_padding_top_3row"
-        android:layout_marginStart="@dimen/tile_padding_side"
-        android:layout_marginEnd="@dimen/tile_padding_side"
+        android:layout_marginLeft="@dimen/tile_padding_side"
+        android:layout_marginRight="@dimen/tile_padding_side"
         android:text="@string/debug_placeholder"
         android:textSize="16sp"
         android:textColor="@android:color/black"/>
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/private_field_name"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginLeft="@dimen/tile_padding_side"
         android:layout_marginRight="@dimen/tile_padding_side"
         android:text="@string/label_password"
@@ -44,9 +44,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/private_field_name"
-        android:layout_toEndOf="@id/private_label_password"
-        android:layout_marginStart="@dimen/tile_padding_small"
-        android:layout_marginEnd="@dimen/tile_padding_side"
+        android:layout_toRightOf="@id/private_label_password"
+        android:layout_marginLeft="@dimen/tile_padding_small"
+        android:layout_marginRight="@dimen/tile_padding_side"
         android:text="@string/debug_placeholder"
         android:textSize="14sp"/>
 
@@ -54,8 +54,8 @@
         android:id="@+id/private_label_updated"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/tile_padding_side"
-        android:layout_marginEnd="@dimen/tile_padding_side"
+        android:layout_marginLeft="@dimen/tile_padding_side"
+        android:layout_marginRight="@dimen/tile_padding_side"
         android:layout_marginBottom="@dimen/tile_padding_bottom"
         android:layout_below="@id/private_label_password"
         android:text="@string/label_updated"
@@ -64,11 +64,11 @@
         android:id="@+id/private_field_updated"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/tile_padding_side"
+        android:layout_marginRight="@dimen/tile_padding_side"
         android:layout_marginBottom="@dimen/tile_padding_bottom"
-        android:layout_alignStart="@id/edit_field_password"
+        android:layout_alignLeft="@id/edit_field_password"
         android:layout_below="@id/private_label_password"
-        android:layout_toEndOf="@id/private_label_updated"
+        android:layout_toRightOf="@id/private_label_updated"
         android:text="@string/label_updated"
         android:textSize="14sp"/>
 
