--- a/app/src/main/res/layout/dialog_choose_network.xml
+++ b/app/src/main/res/layout/dialog_choose_network.xml
@@ -9,8 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dialog_content_padding"
-        android:layout_marginEnd="@dimen/dialog_content_padding"
-        android:layout_marginStart="@dimen/dialog_content_padding"
+        android:layout_marginRight="@dimen/dialog_content_padding"
+        android:layout_marginLeft="@dimen/dialog_content_padding"
         android:layout_marginBottom="@dimen/dialog_content_padding_bottom">
         <TextView
             android:layout_width="wrap_content"
