--- a/app/src/main/res/layout/fragment_private.xml
+++ b/app/src/main/res/layout/fragment_private.xml
@@ -23,8 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="16dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
         android:layout_marginBottom="20dp"
         app:floatingActionButtonColor="@drawable/floating_button"
         android:src="@drawable/ic_add"/>
