--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="@dimen/tile_padding_xlarge"
-    android:layout_marginStart="@dimen/tile_padding_large"
+    android:layout_marginLeft="@dimen/tile_padding_large"
     android:animateLayoutChanges="true"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginEnd="@dimen/tile_padding_xxxlarge"
+        android:layout_marginRight="@dimen/tile_padding_xxxlarge"
         android:weightSum="1">
         <TextView
             android:id="@+id/profile_label_email"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/profile_layout_email"
         android:orientation="horizontal"
-        android:layout_marginEnd="@dimen/tile_padding_xxxlarge"
+        android:layout_marginRight="@dimen/tile_padding_xxxlarge"
         android:weightSum="1">
         <TextView
             android:id="@+id/profile_label_password_current"
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/profile_layout_password_current"
         android:orientation="horizontal"
-        android:layout_marginEnd="@dimen/tile_padding_xxxlarge"
+        android:layout_marginRight="@dimen/tile_padding_xxxlarge"
         android:visibility="gone"
         android:weightSum="1">
         <TextView
@@ -91,7 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/profile_layout_repeat1"
         android:orientation="horizontal"
-        android:layout_marginEnd="@dimen/tile_padding_xxxlarge"
+        android:layout_marginRight="@dimen/tile_padding_xxxlarge"
         android:visibility="gone"
         android:weightSum="1">
         <TextView
@@ -119,7 +119,7 @@
         android:layout_below="@id/profile_layout_repeat2"
         android:orientation="horizontal"
         android:layout_marginTop="@dimen/tile_padding_xlarge"
-        android:layout_marginEnd="@dimen/tile_padding_xxxlarge"
+        android:layout_marginRight="@dimen/tile_padding_xxxlarge"
         android:weightSum="1">
         <TextView
             android:id="@+id/profile_label_count_private"
@@ -144,7 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/profile_layout_counts_private"
         android:orientation="horizontal"
-        android:layout_marginEnd="@dimen/tile_padding_xxxlarge"
+        android:layout_marginRight="@dimen/tile_padding_xxxlarge"
         android:weightSum="1">
         <TextView
             android:id="@+id/profile_label_count_public"
@@ -169,8 +169,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="16dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
         android:layout_marginBottom="20dp"
         app:floatingActionButtonColor="@drawable/floating_button"
         android:src="@drawable/ic_create"
