--- a/app/src/main/res/layout/item_choose.xml
+++ b/app/src/main/res/layout/item_choose.xml
@@ -6,8 +6,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="@dimen/tile_padding_side"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="@dimen/tile_padding_side"
         android:layout_marginTop="@dimen/tile_padding_top_2row"
         android:layout_centerVertical="true"
         android:background="@drawable/ic_signal_wifi_4_32"/>
@@ -15,10 +15,10 @@
         android:id="@+id/choose_list_item_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginTop="@dimen/tile_padding_top_2row"
-        android:layout_marginStart="@dimen/tile_padding_xxxlarge"
-        android:layout_marginEnd="@dimen/tile_padding_side"
+        android:layout_marginLeft="@dimen/tile_padding_xxxlarge"
+        android:layout_marginRight="@dimen/tile_padding_side"
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:text="@string/debug_placeholder"/>
@@ -27,9 +27,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/choose_list_item_title"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="@dimen/tile_padding_xxxlarge"
-        android:layout_marginEnd="@dimen/tile_padding_side"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="@dimen/tile_padding_xxxlarge"
+        android:layout_marginRight="@dimen/tile_padding_side"
         android:layout_marginBottom="@dimen/tile_padding_top_2row"
         android:singleLine="true"
         android:textSize="14sp"
