--- a/app/src/main/res/layout/item_public.xml
+++ b/app/src/main/res/layout/item_public.xml
@@ -9,7 +9,7 @@
         android:text="@string/debug_placeholder"
         android:id="@+id/lTitle_public"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginLeft="@dimen/tile_padding_side"
         android:layout_marginTop="@dimen/tile_padding_top_3row"
         android:layout_marginRight="@dimen/tile_padding_side"
@@ -26,7 +26,7 @@
         android:layout_marginLeft="@dimen/tile_padding_side"
         android:layout_marginRight="@dimen/tile_padding_side"
 
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentLeft="true"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -41,6 +41,6 @@
         android:textSize="14sp"
         android:textColor="#ff2e2e2e"
         android:layout_below="@+id/lSubtitle_public"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentLeft="true"/>
 
 </RelativeLayout>
